--- a/index.css
+++ b/index.css
@@ -41,6 +41,8 @@ body {
   padding-left: 3em;
   padding-right: 3em;
   font-size: 2em;
+  color: white;
+  font-weight: bold;
 }
 
 #lang {
@@ -49,6 +51,7 @@ body {
   margin-right: auto;
   background-color: #3f83e0;
   padding: 5px;
+  color: white;
 }
 #webcam-container {
   margin-top: 20px;
@@ -65,6 +68,7 @@ body {
   padding: 0.5em;
   border-radius: 10px;
   overflow: hidden;
+  color: white;
 }
 
 .d-none {
