--- a/index.css
+++ b/index.css
@@ -22,6 +22,17 @@ body {
   width: 390px;
 }
 
+#buttons-container {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
 #game-container {
   display: block;
   margin-left: auto;
@@ -33,7 +44,7 @@ body {
   flex-direction: column;
 }
 
-#button {
+#buttons-container button {
   display: block;
   margin-left: auto;
   margin-right: auto;
