--- a/index.css
+++ b/index.css
@@ -26,6 +26,7 @@ body {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 20px;
   width: 50%;
   display: flex;
   align-items: center;
